# vkpybot

./: .gitignore  404.html  DebugBot.py  MyBot.py  Procfile  README.md  VK.py  config.yaml.template  index.html  mkdocs.yml  mypy.ini  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  schedule.py  setup.py  sitemap.xml
.github/workflows/: ci.yaml  docs-publish.yaml  publish.yaml  test.yaml
core/: VK.py
docs/: index.md  tutorial.md
docs/documentation/: command.md
docs/en/: tutorial.md
docs/en/documentation/: bot.md  command.md  message.md
docs/ru/: gen_ref_pages.py  index.md  tutorial.md
docs/ru/documentation/: bot.md  command.md
documentation/bot/: index.html
documentation/command/: index.html
documentation/message/: index.html
en/: index.html
en/documentation/bot/: index.html
en/documentation/command/: index.html
en/documentation/message/: index.html
en/tutorial/: index.html
example/: DebugBot.py  MyBot.py  YCF.py  schedule.json  schedule.py
examples/: DebugBot.py  MyBot.py  schedule.py
ru/: index.html
ru/documentation/bot/: index.html
ru/documentation/command/: index.html
ru/documentation/message/: index.html
ru/tutorial/: index.html
search/: search_index.json
src/vkpybot/: __init__.py  bot.py  connection.py  events.py  manager.py  protocols.py  server.py  session.py  types.py  utils.py
tests/: __init__.py  import_test.py  test_basics.py
tutorial/: index.html
vkpybot/: __init__.py  bot.py  events.py  servers.py  sessions.py  types.py  utils.py
vkpybot-stubs/: __init__.pyi  bot.pyi  connection.pyi  events.pyi  manager.pyi  protocols.pyi  server.pyi  session.pyi  types.pyi
