[tool.poetry]
name = "vkpybot"
version = "0.1.13"
description = "Asyncronus library to build VK bot"
authors = ["Vlatterran"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [ {include = "vkpybot"} ]
documentation = "https://vlatterran.github.io/vkpybot/"
repository = "https://github.com/Vlatterran/vkpybot/"
keywords = ["VK", "vk", "bot"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Vlatterran/vkpybot/issues"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.3"
docstring-parser = "^0.15"
requests = "^2.28.2"
aioboto3 = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"