[tool.poetry]
name = "vkpybot"
version = "0.2.0"
description = "Asyncronus library to build VK bot"
authors = ["Vlatterran"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [ {include = "vkpybot"} ]
documentation = "https://vlatterran.github.io/vkpybot/"
repository = "https://github.com/Vlatterran/vkpybot/"
keywords = ["VK", "vk", "bot", "async"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Vlatterran/vkpybot/issues"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
docstring-parser = "^0.15"
requests = "^2.28.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
python-dotenv = "^0.21.1"
pytest-dependency = "^0.5.1"
pytest-asyncio = "^0.20.3"
aioresponses = "^0.7.4"
tox = "^4.4.5"
requests-mock = {extras = ["fixture"], version = "^1.10.0"}

[tool.poetry.group.example]
optional = true

[tool.poetry.group.example.dependencies]
aioboto3 = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"